tambah footer gakdadi

--- a/index.html
+++ b/index.html
@@ -55,6 +55,9 @@
         soluta animi explicabo sunt velit.
       </div>
     </div>
+    <footer id="footer">
+      <h3>Make With ............</h3>
+    </footer>
 
     <!-- end -->
     <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.9"></script>
